src/App.css
/* ... */
  @media (max-width: 768px) {
    select,
    input[type="text"] {
      min-height: 48px;
      min-width: 48px;
    }
  }

  select[disabled],
  input[type="text"][disabled] {
    background: var(--secondary-color);
    cursor: not-allowed;
  }

/* ====================== Side Bar ====================== */
  .side-bar-container {
    background: var(--secondary-light-color);
    padding: var(--side-bar-padding-x);
    flex: 0 0 var(--side-bar-max-width);
    order: 2;
    overflow: auto;
    height: 100%;
  }

  @media screen and (max-width: 600px) {
    .side-bar-container {
      flex: 0 0 100%;
    }
  }

  .side-bar-heading {
    margin: 0.75em 0 0.5em;
  }

  .side-bar-heading-centered {
    text-align: center;
  }

  .padding-inline-start {
    padding-inline-start:40px;
  }

  .form-button {
    width: 48%;
  }

  .side-bar-heading:focus {
    outline: none;
    box-shadow: 0px 0px 0px 3px var(--primary-dark-color-overlay);
    transition: all 0.25s ease-in-out;
    transition-property: outline, box-shadow;
  }

/* ====================== Side Bar - Results ====================== */
  .search-results {
    list-style-type: none;
  }

  .search-results li {
    padding: 2px 0;
  }

  .search-results-entry {
    text-align: center;
    background: var(--secondary-light-color);
    color: var(--secondary-dark-color);
    border: 1px solid var(--secondary-dark-color);
    border-bottom: 3px solid var(--secondary-dark-color);
    padding: 0.5rem;
  }

  .search-results h4 {
    margin: 0;
  }

  .search-results p {
    margin: 0;
    font-style: italic;
  }

  .search-results-entry-selected {
    background: var(--primary-light-color);
    transition: all 0.25s ease-in-out;
  }

  .search-results-entry:hover:not([disabled]),
  .search-results-entry:focus:not([disabled]) {
    outline: none;
    border: 1px solid var(--primary-dark-color);
    border-bottom: 3px solid var(--primary-dark-color);
    box-shadow: inset 0px -3px 0px 0px var(--primary-dark-color-overlay),
      inset 0px 0px 0px 2px var(--primary-dark-color-overlay);
    transition: all 0.25s ease-in-out;
  }

  .search-results-entry:hover:not([disabled]) h4,
  .search-results-entry:focus:not([disabled]) h4 {
    text-decoration: underline;
  }

  .search-results-entry[disabled] {
    background: var(--secondary-color);
    cursor: not-allowed;
  }

  .tiny-loading-gif {
    margin: 0 auto;
    height: auto;
    display: block;
    position: relative;
    text-align: center;
    text-decoration: underline;
  }

  /* Show the alt text nicely in case the image is broken.
   * Hide the broken image icon as well.
   */
  .tiny-loading-gif[alt]:after {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--secondary-light-color);
    content: attr(alt);
    font-size: 1em;
    font-weight: 600;
  }

/* ====================== Map ====================== */
  .map-container {
    order: 3;
    height: 100%;
    background: var(--secondary-light-color);
    position: relative;
    flex: 2 1 auto;
  }

  .map {
    background: var(--secondary-dark-color);
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    transition: all 0.25s ease-in-out;
  }

  .map div[tabindex="0"]:focus > div {
    outline: none !important;
    border: 5px solid var(--primary-color) !important;
    transition: all 0.25s ease-in-out;
  }

  /* ==== Map External Links ==== */
  a[href*="google.com"]:hover,
  a[href*="google.com"]:focus {
    box-shadow: 0px 0px 0px 3px var(--primary-color-overlay);
    transition: all 0.25s ease-in-out;
    transition-property: outline, box-shadow;
  }

  .gmnoprint:not(.gm-bundled-control) {
    background-color: var(--secondary-light-color);
    color: var(--secondary-dark-color);
  }

  a[title*="Open this area in Google Maps"]:visited {
    color: transparent !important;
  }

  a[title*="Open this area in Google Maps"]:hover,
  a[title*="Open this area in Google Maps"]:focus {
    color: transparent !important;
    outline: none !important;
    box-shadow: none !important;
  }

  a[title*="Open this area in Google Maps"]:hover img,
  a[title*="Open this area in Google Maps"]:focus img {
    box-shadow: 0px 0px 0px 3px var(--primary-color-overlay);
    transition: all 0.25s ease-in-out;
    transition-property: outline, box-shadow;
  }

  /* ==== Map Controls ==== */
  [title*="Toggle fullscreen view"]:hover,
  [title*="Toggle fullscreen view"]:focus,
  [title*="Zoom in"]:hover,
  [title*="Zoom in"]:focus,
  [title*="Zoom out"]:hover,
  [title*="Zoom out"]:focus {
    outline: none !important;
    box-shadow: 0px 0px 0px 3px var(--primary-color-overlay) !important;
    transition: all 0.25s ease-in-out;
    transition-property: outline, box-shadow;
  }

  /* ==== Hide undesired map controls when offline ==== */
  [title*="Drag Pegman"],
  [title*="Show street map"],
  [title*="Show satellite imagery"],
  [title*="Show imagery"] {
    display: none !important;
  }


  /* ==== Loading/Error Modes ==== */
  .hide-map {
    display: none;
  }

  .loading-mode,
  .error-mode {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--secondary-light-color);
    color: var(--secondary-dark-color);
  }

  .error-message {
    max-width: 280px;
    text-align: center;
    font-weight: 600;
  }

  .loading-gif {
    margin: 0 auto;
    max-width: 200px;
    height: auto;
    display: block;
    position: relative;
    text-align: center;
    text-decoration: underline;
  }

  /* Show the alt text nicely in case the image is broken.
   * Hide the broken image icon as well.
   */
  .loading-gif[alt]:after {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--secondary-light-color);
    content: attr(alt);
    font-size: 1.25em;
  }
/* ... */

